--- a/astahm2t/pom.xml
+++ b/astahm2t/pom.xml
@@ -280,14 +280,19 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.3.3</version>
+			<version>2.4.3</version>
 		</dependency>
 		<dependency>
-			<groupId>com.googlecode.java-diff-utils</groupId>
+			<groupId>jp.skypencil.java-diff-utils</groupId>
 			<artifactId>diffutils</artifactId>
-			<version>1.3.0</version>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
 		</dependency>
 	</dependencies>
-	<version>1.2</version>
-	<description>LED-Camp2用 Astah コード生成プラグイン</description>
+	<version>1.3</version>
+	<description>LED-Camp3用 Astah コード生成プラグイン</description>
 </project>
