--- a/astahm2t/src/main/java/jp/swest/ledcamp/setting/.gitignore
+++ b/astahm2t/src/main/java/jp/swest/ledcamp/setting/.gitignore
@@ -2,3 +2,8 @@
 /.SettingManager.java._trace
 /.TemplateMap.java._trace
 /.GenerateType.java._trace
+/.SettingDialog.java._trace
+/.TemplateType.java._trace
+/.GeneratorEngine.java._trace
+/.TemplateEngine.java._trace
+/.TemplatePanel.java._trace
