プロジェクト名変更

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>astahm2t_</name>
+	<name>astahm2t</name>
 	<comment></comment>
 	<projects>
 	</projects>
