--- a/src/main/java/jp/swest/ledcamp/generator/.gitignore
+++ b/src/main/java/jp/swest/ledcamp/generator/.gitignore
@@ -3,3 +3,8 @@
 /.VelocityGenerator.java._trace
 /.ITemplateEngine.java._trace
 /.GroovyGenerator.java._trace
+/CodeGenerator.java
+/GeneratorUtils.java
+/GroovyGenerator.java
+/ITemplateEngine.java
+/VelocityGenerator.java
