--- a/pom.xml
+++ b/pom.xml
@@ -302,8 +302,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<version>2.4.3</version>
+			<artifactId>groovy-templates</artifactId>
+			<version>2.4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>jp.skypencil.java-diff-utils</groupId>
