--- a/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -1,5 +1,6 @@
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/java.directory=src/main/java
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/test/java.directory=target/xtend-gen/test
+BuilderConfiguration.is_project_specific=true
 eclipse.preferences.version=1
 is_project_specific=true
 outlet.DEFAULT_OUTPUT.directory=src/main/java
