--- a/src/main/java/jp/swest/ledcamp/generator/.gitignore
+++ b/src/main/java/jp/swest/ledcamp/generator/.gitignore
@@ -1,1 +1,6 @@
 /GroovyGenerator.java
+/ITemplateEngine.java
+/VelocityGenerator.java
+/CodeGenerator.java
+/GeneratorUtils.java
+/XtendGenerator.java
