--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,11 @@
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.53</version>
+		</dependency>
 	</dependencies>
 	<version>1.3.5</version>
 	<description>LED-Camp3用 Astah コード生成プラグイン</description>
