生成ファイルのZip化まで仮実装

--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,12 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+		<dependency>
+			<groupId>org.zeroturnaround</groupId>
+			<artifactId>zt-zip</artifactId>
+			<version>1.9</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 	<version>1.4.0</version>
 	<description>LED-Camp3用 Astah コード生成プラグイン</description>
