--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,6 @@
 			<version>2.8.0</version>
 		</dependency>
 	</dependencies>
-	<version>1.5.0</version>
-	<description>astah* コード生成プラグイン</description>
+	<version>1.3.5</version>
+	<description>LED-Camp3用 Astah コード生成プラグイン</description>
 </project>
